modify for swagger